@@ -5,22 +5,25 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
 import uk.gov.digital.ho.hocs.casework.api.dto.CorrespondentTypeDto;
 import uk.gov.digital.ho.hocs.casework.api.dto.CreateCorrespondentRequest;
-import uk.gov.digital.ho.hocs.casework.api.dto.GetCorrespondentOutlinesResponse;
 import uk.gov.digital.ho.hocs.casework.api.dto.GetCorrespondentResponse;
 import uk.gov.digital.ho.hocs.casework.api.dto.GetCorrespondentTypeResponse;
 import uk.gov.digital.ho.hocs.casework.api.dto.GetCorrespondentsResponse;
 import uk.gov.digital.ho.hocs.casework.api.dto.UpdateCorrespondentRequest;
+import uk.gov.digital.ho.hocs.casework.api.utils.JsonResponseStreamer;
 import uk.gov.digital.ho.hocs.casework.domain.model.Address;
 import uk.gov.digital.ho.hocs.casework.domain.model.Correspondent;
 
-import java.util.Arrays;
 import java.util.HashSet;
-import java.util.Optional;
+import java.util.List;
 import java.util.UUID;
+import java.util.function.Supplier;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.any;
@@ -32,6 +35,7 @@ import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 @RunWith(MockitoJUnitRunner.class)
+@SpringBootTest
 public class CorrespondentResourceTest {
 
     private final UUID caseUUID = UUID.randomUUID();
@@ -43,44 +47,49 @@ public class CorrespondentResourceTest {
     @Mock
     private CorrespondentService correspondentService;
 
+    @Mock
+    private JsonResponseStreamer jsonResponseStreamer;
+
     private CorrespondentResource correspondentResource;
 
     @Before
     public void setUp() {
-        correspondentResource = new CorrespondentResource(correspondentService);
+        correspondentResource = new CorrespondentResource(correspondentService, jsonResponseStreamer);
+
+        // Ensure stream supplier is invoked
+        when(jsonResponseStreamer.jsonStringsWrappedTransactionalStreamingResponseBody(eq("correspondents"), any()))
+            .thenAnswer(invocation -> {
+                invocation.<Supplier<?>>getArgument(1).get();
+                return ResponseEntity.ok().build();
+            });
     }
 
     @Test
     public void getAllActiveCorrespondents() {
-        when(correspondentService.getAllCorrespondents(false)).thenReturn(new HashSet<>());
+        when(correspondentService.streamCorrespondentOutlineJson(false)).thenReturn(Stream.of());
 
-        ResponseEntity<GetCorrespondentOutlinesResponse> response = correspondentResource.getAllActiveCorrespondents(
-            Optional.empty());
+        ResponseEntity<StreamingResponseBody> response = correspondentResource.getAllActiveCorrespondents(false);
 
         assertThat(response).isNotNull();
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        verify(correspondentService).getAllCorrespondents(false);
+        verify(correspondentService).streamCorrespondentOutlineJson(false);
         verifyNoMoreInteractions(correspondentService);
     }
 
     @Test
     public void getAllCorrespondents() {
-        when(correspondentService.getAllCorrespondents(true)).thenReturn(new HashSet<>());
+        when(correspondentService.streamCorrespondentOutlineJson(true)).thenReturn(Stream.of());
 
-        ResponseEntity<GetCorrespondentOutlinesResponse> response = correspondentResource.getAllActiveCorrespondents(
-            Optional.of(true));
+        ResponseEntity<StreamingResponseBody> response = correspondentResource.getAllActiveCorrespondents(true);
 
         assertThat(response).isNotNull();
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        verify(correspondentService).getAllCorrespondents(true);
+        verify(correspondentService).streamCorrespondentOutlineJson(true);
         verifyNoMoreInteractions(correspondentService);
     }
 
     @Test
     public void shouldAddCorrespondentToCase() {
-
-        Address address = new Address("anyPostcode", "any1", "any2", "any3", "anyCountry");
-
         doNothing().when(correspondentService).createCorrespondent(eq(caseUUID), eq(stageUUID), eq("any"),
             eq("anyFullName"), eq("organisation"), any(Address.class), eq("anyPhone"), eq("anyEmail"),
             eq("anyReference"), eq("external key"));
@@ -88,7 +97,7 @@ public class CorrespondentResourceTest {
         CreateCorrespondentRequest createCorrespondentRequest = new CreateCorrespondentRequest("any", "anyFullName",
             "organisation", "anyPostcode", "any1", "any2", "any3", "anyCountry", "anyPhone", "anyEmail", "anyReference",
             "external key");
-        ResponseEntity response = correspondentResource.addCorrespondentToCase(caseUUID, stageUUID,
+        ResponseEntity<Void> response = correspondentResource.addCorrespondentToCase(caseUUID, stageUUID,
             createCorrespondentRequest);
 
         verify(correspondentService, times(1)).createCorrespondent(eq(caseUUID), eq(stageUUID), eq("any"),
@@ -141,7 +150,7 @@ public class CorrespondentResourceTest {
 
         CorrespondentTypeDto correspondentTypeDto = new CorrespondentTypeDto();
         when(correspondentService.getCorrespondentTypes(caseUUID)).thenReturn(
-            new HashSet(Arrays.asList(correspondentTypeDto)));
+            new HashSet<>(List.of(correspondentTypeDto)));
 
         ResponseEntity<GetCorrespondentTypeResponse> response = correspondentResource.getCorrespondentType(caseUUID);
 
@@ -156,7 +165,7 @@ public class CorrespondentResourceTest {
 
         doNothing().when(correspondentService).deleteCorrespondent(caseUUID, stageUUID, correspondentUUID);
 
-        ResponseEntity response = correspondentResource.deleteCorrespondent(caseUUID, stageUUID, correspondentUUID);
+        ResponseEntity<GetCorrespondentResponse> response = correspondentResource.deleteCorrespondent(caseUUID, stageUUID, correspondentUUID);
 
         verify(correspondentService, times(1)).deleteCorrespondent(caseUUID, stageUUID, correspondentUUID);
 
@@ -169,15 +178,13 @@ public class CorrespondentResourceTest {
     @Test
     public void shouldUpdateCorrespondentOnCase() {
 
-        Address address = new Address("anyPostcode", "any1", "any2", "any3", "anyCountry");
-
         UpdateCorrespondentRequest updateCorrespondentRequest = new UpdateCorrespondentRequest("anyFullName",
             "organisation", "anyPostcode", "any1", "any2", "any3", "anyCountry", "anyPhone", "anyEmail",
             "anyReference");
         doNothing().when(correspondentService).updateCorrespondent(eq(caseUUID), eq(correspondentUUID),
             eq(updateCorrespondentRequest));
 
-        ResponseEntity response = correspondentResource.updateCorrespondent(caseUUID, stageUUID, correspondentUUID,
+        ResponseEntity<Void> response = correspondentResource.updateCorrespondent(caseUUID, stageUUID, correspondentUUID,
             updateCorrespondentRequest);
 
         verify(correspondentService, times(1)).updateCorrespondent(eq(caseUUID), eq(correspondentUUID),
